F03: TEST Change confirmation list creation method